Updated project information to version 2.0.1 and signed all assemblies.

--- a/PInvoke/BITS/Vanara.PInvoke.BITS.csproj
+++ b/PInvoke/BITS/Vanara.PInvoke.BITS.csproj
@@ -32,6 +32,8 @@ IBackgroundCopyCallback, IBackgroundCopyCallback2, IBackgroundCopyCallback3, IBa
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
