--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -28,7 +28,7 @@ Functions
 _TrackMouseEvent, CreateMappedBitmap, CreatePropertySheetPageA, CreatePropertySheetPageW, CreateUpDownControl, DefSubclassProc, DestroyPropertySheetPage, DPA_Clone, DPA_Create, DPA_CreateEx, DPA_DeleteAllPtrs, DPA_DeletePtr, DPA_Destroy, DPA_DestroyCallback, DPA_EnumCallback, DPA_GetPtr, DPA_GetPtrIndex, DPA_GetSize, DPA_Grow, DPA_InsertPtr, DPA_LoadStream, DPA_Merge, DPA_SaveStream, DPA_Search, DPA_SetPtr, DPA_Sort, DrawInsert, DrawShadowText, DrawStatusTextA, DrawStatusTextW, DSA_Clone, DSA_Create, DSA_DeleteAllItems, DSA_DeleteItem, DSA_Destroy, DSA_DestroyCallback, DSA_EnumCallback, DSA_GetItem, DSA_GetItemPtr, DSA_GetSize, DSA_InsertItem, DSA_SetItem, DSA_Sort, GetEffectiveClientRect, GetMUILanguage, GetWindowSubclass, HIMAGELIST_QueryInterface, ImageList_CoCreateInstance, ImageList_Create, ImageList_Destroy, ImageList_Duplicate, ImageList_GetIcon, ImageList_LoadImageA, ImageList_LoadImageW, ImageList_Read, ImageList_ReadEx, ImageList_Write, ImageList_WriteEx, InitCommonControlsEx, InitMUILanguage, LBItemFromPt, LoadIconMetric, LoadIconWithScaleDown, MakeDragList, MenuHelp, PropertySheetA, PropertySheetW, RemoveWindowSubclass, SendMessageA, SendMessageW, SetWindowSubclass, ShowHideMenuCtl, Str_SetPtrW, TaskDialog, TaskDialogIndirect
 
 Structures
-COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, EDITBALLOONTIP, HDTEXTFILTER, HDHITTESTINFO, HDLAYOUT, IMAGELISTSTATS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, LVTILEVIEWINFO, LVCOLUMN, LVGROUP, LVITEM, PBRANGE, TCHITTESTINFO, TCITEM, TCITEMHEADER, TASKDIALOG_BUTTON, COLORMAP, TBBUTTON, TBBUTTONINFO, TBINSERTMARK, TBMETRICS, TTGETTITLE, HTREEITEM, TVHITTESTINFO, TVITEM, TVSORTCB, TVGETITEMPARTRECTINFO, UDACCEL, DPASTREAMINFO
+BUTTON_IMAGELIST, BUTTON_SPLITINFO, NMBCDROPDOWN, NMBCHOTITEM, COMBOBOXINFO, NMCBEDRAGBEGIN, NMCBEENDEDIT, NMCOMBOBOXEX, COMBOBOXEXITEM, COLORSCHEME, INITCOMMONCONTROLSEX, NMCHAR, NMCUSTOMDRAW, NMCUSTOMSPLITRECTINFO, NMCUSTOMTEXT, NMKEY, NMMOUSE, NMOBJECTNOTIFY, NMTOOLTIPSCREATED, EDITBALLOONTIP, HDTEXTFILTER, HDHITTESTINFO, HDITEM, HDLAYOUT, NMHDDISPINFO, NMHDFILTERBTNCLICK, NMHEADER, IMAGEINFO, IMAGELISTSTATS, IMAGELISTDRAWPARAMS, NMIPADDRESS, LVFINDINFO, LVGROUPMETRICS, LVHITTESTINFO, LVINSERTMARK, LVITEMCOLUMNINFO, LVITEMINDEX, LVTILEVIEWINFO, NMLISTVIEW, LVBKIMAGE, LVCOLUMN, LVGROUP, LVITEM, PBRANGE, PROPSHEETHEADER, PROPSHEETPAGE, TCHITTESTINFO, TCITEM, TCITEMHEADER, TASKDIALOG_BUTTON, TASKDIALOGCONFIG, COLORMAP, NMTBDISPINFO, NMTBGETINFOTIP, NMTBHOTITEM, NMTBRESTORE, NMTBSAVE, NMTOOLBAR, TBADDBITMAP, TBBUTTON, TBBUTTONINFO, TBINSERTMARK, TBMETRICS, TBREPLACEBITMAP, TBSAVEPARAMS, NMTTDISPINFO, TOOLINFO, TTGETTITLE, TTHITTESTINFO, NMTRBTHUMBPOSCHANGING, HTREEITEM, NMTREEVIEW, NMTVASYNCDRAW, NMTVCUSTOMDRAW, NMTVDISPINFO, NMTVDISPINFOEX, NMTVGETINFOTIP, NMTVITEMCHANGE, NMTVKEYDOWN, TVHITTESTINFO, TVINSERTSTRUCT, TVITEM, TVITEMEX, TVSORTCB, TVGETITEMPARTRECTINFO, NMUPDOWN, UDACCEL, DPASTREAMINFO
 
 Interfaces
 IImageList, IImageList2
@@ -36,6 +36,8 @@ IImageList, IImageList2
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
     <ApplicationManifest>Library.manifest</ApplicationManifest>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
