--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -40,6 +40,8 @@ CorrepsondingAction, StringListPackMethod
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
