--- a/PInvoke/IpHlpApi/Vanara.PInvoke.IpHlpApi.csproj
+++ b/PInvoke/IpHlpApi/Vanara.PInvoke.IpHlpApi.csproj
@@ -32,6 +32,8 @@ IP_ADAPTER_INDEX_MAP, NET_LUID, FIXED_INFO, IP_ADAPTER_ADDRESSES, IP_ADAPTER_ANY
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
