--- a/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
+++ b/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
@@ -35,6 +35,8 @@ IErrorLog, IPropertyBag, IRecordInfo, IEnumSTATSTG, IStorage, IDropSource, IOleW
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
