--- a/PInvoke/User32.Gdi/Vanara.PInvoke.User32.Gdi.csproj
+++ b/PInvoke/User32.Gdi/Vanara.PInvoke.User32.Gdi.csproj
@@ -32,6 +32,8 @@ ICONINFO, NMHDR, MINMAXINFO, WINDOWPOS, GRPICONDIR, GRPICONDIRENTRY
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
