--- a/Security/Vanara.Security.csproj
+++ b/Security/Vanara.Security.csproj
@@ -30,6 +30,8 @@ AccountLogonRights, DesiredAccess, SystemPrivilege
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
