--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -33,6 +33,8 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
