--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -7,7 +7,7 @@
 * SafeHandle based classes for working with memory allocated via CoTaskMem, HGlobal, or Local calls that handles packing and extracting arrays, structures and raw memory
 * Safe pinning of objects in memory
 * Memory stream based on marshaled memory</Description>
-    <Copyright>Copyright © 2017-2018</Copyright>
+    <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <VersionPrefix>2.1.2</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
@@ -20,7 +20,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/dahall/Vanara/master/docs/icons/Vanara48x48.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/dahall/vanara</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <PackageTags>vanara net-extensions interop</PackageTags>
+    <PackageTags>vanara;net-extensions;interop</PackageTags>
     <NeutralLanguage>en-US</NeutralLanguage>
     <IncludeSource>true</IncludeSource>
     <IncludeSymbols>true</IncludeSymbols>
