--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Data" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
@@ -134,6 +135,7 @@
     <Compile Include="UI\Dialogs\AccessControlEditorTests.cs" />
     <Compile Include="UI\Dialogs\TaskDialogTests.cs" />
     <Compile Include="UI\Dialogs\NetworkConnectionDialogTests.cs" />
+    <Compile Include="UI\ExplorerBrowserTests.cs" />
     <Compile Include="UI\VisualThemeTests.cs" />
     <Compile Include="UI\Extensions\ImageListTests.cs" />
     <Compile Include="UI\Dialogs\CredentialsDialogTests.cs" />
@@ -264,7 +266,6 @@
       <Name>Vanara.Windows.Shell</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
