--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -44,6 +44,12 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <Compile Remove="_InProgress_\**\*" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Controls\ExplorerBrowser.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Controls\ExplorerBrowser.bmp" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -51,7 +57,11 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\ExplorerBrowser.bmp" />
     <EmbeddedResource Include="Extenders\GlassExtenderProvider.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Controls\ExplorerBrowser.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
@@ -66,6 +76,7 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
     <ProjectReference Include="..\PInvoke\UxTheme\Vanara.PInvoke.UxTheme.csproj" />
     <ProjectReference Include="..\Security\Vanara.Security.csproj" />
+    <ProjectReference Include="..\Windows.Shell\Vanara.Windows.Shell.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Controls\CollapsiblePanel.cs">
@@ -96,9 +107,6 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
       <SubType>Component</SubType>
     </Compile>
     <Compile Update="Controls\IPAddressBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="Controls\IPAddressBox.Designer.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Update="Controls\SplitButton.cs">
