Updated themed controls to use VisualTheme instead of VisualStyleRenderer to avoid display problems in Win10

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -135,7 +135,8 @@
     <Compile Include="UI\Dialogs\AccessControlEditorTests.cs" />
     <Compile Include="UI\Dialogs\TaskDialogTests.cs" />
     <Compile Include="UI\Dialogs\NetworkConnectionDialogTests.cs" />
-    <Compile Include="UI\ExplorerBrowserTests.cs" />
+    <Compile Include="UI\ThemedControlTests.cs" />
+    <None Include="UI\ExplorerBrowserTests.cs" />
     <Compile Include="UI\VisualThemeTests.cs" />
     <Compile Include="UI\Extensions\ImageListTests.cs" />
     <Compile Include="UI\Dialogs\CredentialsDialogTests.cs" />
