--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -4,7 +4,7 @@
     <Description>Methods, structures and constants imported from Gdi32.dll</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>2.2.0</VersionPrefix>
+    <VersionPrefix>2.2.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Gdi32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -28,7 +28,7 @@ Functions
 BitBlt, CreateBrushIndirect, CreateCompatibleDC, CreateDIBPatternBrush, CreateDIBPatternBrushPt, CreateDIBSection, CreateEnhMetaFileA, CreateEnhMetaFileW, CreateHatchBrush, CreatePatternBrush, CreatePen, CreatePenIndirect, CreateSolidBrush, DeleteDC, DeleteEnhMetaFile, DeleteObject, ExtCreatePen, GdiAlphaBlend, GdiFlush, GdiTransparentBlt, GetBrushOrgEx, GetDeviceCaps, GetDIBits, GetEnhMetaFileA, GetEnhMetaFileW, GetObjectA, GetObjectW, GetSysColorBrush, LPtoDP, PatBlt, SelectObject, SetBkMode, SetBrushOrgEx, SetLayout
 
 Structures
-BITMAP, BITMAPINFO, BITMAPINFOHEADER, DIBSECTION, RGBQUAD, BLENDFUNCTION, LOGBRUSH, EXTLOGPEN, LOGPEN, TEXTMETRIC
+BITMAP, BITMAPINFO, BITMAPINFOHEADER, DIBSECTION, RGBQUAD, BLENDFUNCTION, LOGBRUSH, DISPLAY_DEVICE, EXTLOGPEN, LOGPEN, TEXTMETRIC
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
