--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -4,7 +4,7 @@
     <Description>Classes for Windows Shell items derived from the Vanara PInvoke libraries. Includes shell items, files, icons, links, and taskbar lists.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>2.2.0</VersionPrefix>
+    <VersionPrefix>2.2.1</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45</TargetFrameworks>
     <AssemblyName>Vanara.Windows.Shell</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -50,6 +50,9 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase">
+      <HintPath>\Program Files (x86)\Reference Assemblies\Microsoft\Framework\v3.0\WindowsBase.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
@@ -63,6 +66,28 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="TaskBar\AssocUtil.cs" />
+    <Compile Remove="TaskBar\ImageIndexer.cs" />
+    <Compile Remove="TaskBar\JumpList.cs" />
+    <Compile Remove="TaskBar\TaskbarButton.cs" />
+    <Compile Remove="TaskBar\TaskbarButtonThumbnail.cs" />
+    <Compile Remove="TaskBar\TaskbarButtonThumbnails.cs" />
+    <Compile Remove="TaskBar\ThumbnailToolbar.cs" />
+    <Compile Remove="TaskBar\ThumbnailToolbarButton.cs" />
+    <Compile Remove="TaskBar\ThumbnailToolbarButtonCollection.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TaskBar\AssocUtil.cs" />
+    <None Include="TaskBar\ImageIndexer.cs" />
+    <None Include="TaskBar\JumpList.cs" />
+    <None Include="TaskBar\TaskbarButton.cs" />
+    <None Include="TaskBar\TaskbarButtonThumbnail.cs" />
+    <None Include="TaskBar\TaskbarButtonThumbnails.cs" />
+    <None Include="TaskBar\ThumbnailToolbar.cs" />
+    <None Include="TaskBar\ThumbnailToolbarButton.cs" />
+    <None Include="TaskBar\ThumbnailToolbarButtonCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
