--- a/PInvoke/NetApi32/Vanara.PInvoke.NetApi32.csproj
+++ b/PInvoke/NetApi32/Vanara.PInvoke.NetApi32.csproj
@@ -25,10 +25,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-DsAddressToSiteNamesA, DsAddressToSiteNamesExA, DsAddressToSiteNamesExW, DsAddressToSiteNamesW, DsDeregisterDnsHostRecordsA, DsDeregisterDnsHostRecordsW, DsEnumerateDomainTrustsA, DsEnumerateDomainTrustsW, DsGetDcCloseW, DsGetDcNameA, DsGetDcNameW, DsGetDcNextA, DsGetDcNextW, DsGetDcOpenA, DsGetDcOpenW, DsGetDcSiteCoverageA, DsGetDcSiteCoverageW, DsGetForestTrustInformationW, DsGetSiteNameA, DsGetSiteNameW, DsMergeForestTrustInformationW, DsRoleFreeMemory, DsRoleGetPrimaryDomainInformation, DsValidateSubnetNameA, DsValidateSubnetNameW, NetApiBufferFree, NetServerComputerNameAdd, NetServerComputerNameDel, NetServerDiskEnum, NetServerEnum, NetServerGetInfo, NetServerSetInfo, NetServerTransportAdd, NetServerTransportAddEx, NetServerTransportDel, NetServerTransportEnum
+DavAddConnection, DavCancelConnectionsToServer, DavDeleteConnection, DavFlushFile, DavGetExtendedError, DavGetHTTPFromUNCPath, DavGetTheLockOwnerOfTheFile, DavGetUNCFromHTTPPath, DavInvalidateCache, DavRegisterAuthCallback, DavUnregisterAuthCallback, DsAddressToSiteNamesA, DsAddressToSiteNamesExA, DsAddressToSiteNamesExW, DsAddressToSiteNamesW, DsDeregisterDnsHostRecordsA, DsDeregisterDnsHostRecordsW, DsEnumerateDomainTrustsA, DsEnumerateDomainTrustsW, DsGetDcCloseW, DsGetDcNameA, DsGetDcNameW, DsGetDcNextA, DsGetDcNextW, DsGetDcOpenA, DsGetDcOpenW, DsGetDcSiteCoverageA, DsGetDcSiteCoverageW, DsGetForestTrustInformationW, DsGetSiteNameA, DsGetSiteNameW, DsMergeForestTrustInformationW, DsRoleFreeMemory, DsRoleGetPrimaryDomainInformation, DsValidateSubnetNameA, DsValidateSubnetNameW, NetAddAlternateComputerName, NetAlertRaise, NetAlertRaiseEx, NetApiBufferAllocate, NetApiBufferFree, NetApiBufferReallocate, NetApiBufferSize, NetConnectionEnum, NetCreateProvisioningPackage, NetEnumerateComputerNames, NetFileClose, NetFileEnum, NetFileGetInfo, NetFreeAadJoinInformation, NetGetAadJoinInformation, NetGetJoinableOUs, NetGetJoinInformation, NetJoinDomain, NetProvisionComputerAccount, NetRemoteComputerSupports, NetRemoteTOD, NetRemoveAlternateComputerName, NetRenameMachineInDomain, NetRequestOfflineDomainJoin, NetRequestProvisioningPackageInstall, NetServerComputerNameAdd, NetServerComputerNameDel, NetServerDiskEnum, NetServerEnum, NetServerGetInfo, NetServerSetInfo, NetServerTransportAdd, NetServerTransportAddEx, NetServerTransportDel, NetServerTransportEnum, NetSessionDel, NetSessionEnum, NetSessionGetInfo, NetSetPrimaryComputerName, NetShareAdd, NetShareCheck, NetShareDel, NetShareDelEx, NetShareEnum, NetShareGetInfo, NetShareSetInfo, NetUnjoinDomain, NetUseAdd, NetUseDel, NetUseEnum, NetUseGetInfo, NetValidateName, NetWkstaGetInfo, NetWkstaSetInfo, NetWkstaTransportAdd, NetWkstaTransportDel, NetWkstaTransportEnum, NetWkstaUserEnum, NetWkstaUserGetInfo, NetWkstaUserSetInfo
 
 Structures
-DOMAIN_CONTROLLER_INFO, DS_DOMAIN_TRUSTS, DSROLE_OPERATION_STATE_INFO, DSROLE_PRIMARY_DOMAIN_INFO_BASIC, DSROLE_UPGRADE_STATUS_INFO, SERVER_INFO_100, SERVER_INFO_101, SERVER_INFO_102, SERVER_INFO_402, SERVER_INFO_403, SERVER_TRANSPORT_INFO_0, SERVER_TRANSPORT_INFO_1, SERVER_TRANSPORT_INFO_2, SERVER_TRANSPORT_INFO_3
+DAV_CALLBACK_AUTH_BLOB, DAV_CALLBACK_AUTH_UNP, DAV_CALLBACK_CRED, DOMAIN_CONTROLLER_INFO, DS_DOMAIN_TRUSTS, DSROLE_OPERATION_STATE_INFO, DSROLE_PRIMARY_DOMAIN_INFO_BASIC, DSROLE_UPGRADE_STATUS_INFO, ADMIN_OTHER_INFO, ERRLOG_OTHER_INFO, PRINT_OTHER_INFO, STD_ALERT, USER_OTHER_INFO, DSREG_USER_INFO, NETSETUP_PROVISIONING_PARAMS, TIME_OF_DAY_INFO, SERVER_INFO_100, SERVER_INFO_101, SERVER_INFO_102, SERVER_INFO_402, SERVER_INFO_403, SERVER_TRANSPORT_INFO_0, SERVER_TRANSPORT_INFO_1, SERVER_TRANSPORT_INFO_2, SERVER_TRANSPORT_INFO_3, CONNECTION_INFO_0, CONNECTION_INFO_1, FILE_INFO_2, FILE_INFO_3, SESSION_INFO_0, SESSION_INFO_1, SESSION_INFO_10, SESSION_INFO_2, SESSION_INFO_502, SHARE_INFO_0, SHARE_INFO_1, SHARE_INFO_1004, SHARE_INFO_1005, SHARE_INFO_1006, SHARE_INFO_1501, SHARE_INFO_2, SHARE_INFO_502, SHARE_INFO_503, USE_INFO_0, USE_INFO_1, USE_INFO_2, USE_INFO_3, USE_INFO_4, USE_INFO_5, WKSTA_INFO_100, WKSTA_INFO_101, WKSTA_INFO_1010, WKSTA_INFO_1011, WKSTA_INFO_1012, WKSTA_INFO_1013, WKSTA_INFO_1018, WKSTA_INFO_102, WKSTA_INFO_1023, WKSTA_INFO_1027, WKSTA_INFO_1028, WKSTA_INFO_1032, WKSTA_INFO_1033, WKSTA_INFO_1041, WKSTA_INFO_1042, WKSTA_INFO_1043, WKSTA_INFO_1044, WKSTA_INFO_1045, WKSTA_INFO_1046, WKSTA_INFO_1047, WKSTA_INFO_1048, WKSTA_INFO_1049, WKSTA_INFO_1050, WKSTA_INFO_1051, WKSTA_INFO_1052, WKSTA_INFO_1053, WKSTA_INFO_1054, WKSTA_INFO_1055, WKSTA_INFO_1056, WKSTA_INFO_1057, WKSTA_INFO_1058, WKSTA_INFO_1059, WKSTA_INFO_1060, WKSTA_INFO_1061, WKSTA_INFO_1062, WKSTA_INFO_302, WKSTA_INFO_402, WKSTA_INFO_502, WKSTA_TRANSPORT_INFO_0, WKSTA_USER_INFO_0, WKSTA_USER_INFO_1, WKSTA_USER_INFO_1101
 
 </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
@@ -47,9 +47,30 @@ DOMAIN_CONTROLLER_INFO, DS_DOMAIN_TRUSTS, DSROLE_OPERATION_STATE_INFO, DSROLE_PR
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
     <Reference Include="System" />
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System" />
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.5.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
